use isEmpty instead of isBlank